# dt-extensions-yamlex

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  pyproject.toml
docs/: build.sh  readme.tera
src/yamlex/: __init__.py
src/yamlex/api/: differ.py  exceptions.py  joiner.py  mapper.py  splitter.py  util.py
src/yamlex/cli/: app.py  common_flags.py
src/yamlex/cli/commands/: diff.py  join.py  map.py  split.py
yaml_assembler/: assembler.py  cli.py  disassembler.py  schema_mapper.py
yamlex/: __init__.py  __main__.py  cli.py  datasource_names.py  folder_structure.py  joiner.py  mapper.py  schema_mapper.py  splitter.py  util.py
yamlex/api/: differ.py  exceptions.py  joiner.py  mapper.py  splitter.py  util.py
yamlex/cli/: app.py  common_flags.py  version.py
yamlex/cli/commands/: diff.py  join.py  map.py  split.py
