[tool.poetry]
authors = ["Vagiz Duseev <vagiz.duseev@dynatrace.com>"]
description = "Command-line tool to simplify development of Dynatrace Extensions with big YAML"
documentation = "https://github.com/dynatrace-extensions/dt-extensions-yaml-assembler"
homepage = "https://github.com/dynatrace-extensions/dt-extensions-yaml-assembler"
keywords = ["dynatrace", "cli", "extensions"]
license = "Apache-2.0"
maintainers = ["Vagiz Duseev <vagiz.duseev@dynatrace.com>"]
name = "yamlex"
packages = [
  {include = "yamlex"},
]
readme = "README.md"
repository = "https://github.com/dynatrace-extensions/dt-extensions-yamlex"
version = "1.0.9"

[tool.poetry.dependencies]
python = "^3.9"
wheel = "^0"
typer = "^0.9"
typing-extensions = "^4"
ruamel-yaml = "^0.18"
rich = "^13.7"

[tool.poetry.group.dev.dependencies]
black = {version = ">=20", allow-prereleases = true}
bump2version = ">=1.0"
debugpy = "^1.8.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.8"]

[tool.poetry.scripts]
yamlex = 'yamlex.cli:run'

[tool.black]
line-length = 120
