[tool.poetry]
authors = ["Vagiz Duseev <vagiz.duseev@dynatrace.com>"]
description = "Command-line tool to simplify development of Dynatrace Extensions with big YAML"
documentation = "https://github.com/dynatrace-extensions/dt-extensions-yamlex"
homepage = "https://github.com/dynatrace-extensions/dt-extensions-yamlex"
keywords = ["dynatrace", "cli", "extensions"]
license = "Apache-2.0"
maintainers = ["Vagiz Duseev <vagiz.duseev@dynatrace.com>"]
name = "yamlex"
packages = [
  {include = "yamlex"},
]
readme = "README.md"
repository = "https://github.com/dynatrace-extensions/dt-extensions-yamlex"
version = "1.1.1"

[tool.poetry.dependencies]
python = "^3.9"
wheel = "^0"
typer = "^0.9"
typing-extensions = "^4"
ruamel-yaml = "^0.18"
rich = "^13.7"
deepdiff = "^8.4.2"

[tool.poetry.group.dev.dependencies]
black = {version = ">=20", allow-prereleases = true}
bump2version = ">=1.0"
debugpy = "^1.8.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.8"]

[tool.poetry.scripts]
yamlex = 'yamlex.cli.app:run'

[tool.black]
line-length = 120
